# revere

./: .gitignore  .gitmodules  CMakeLists.txt  FFmpeg.cmake  GStreamer.cmake  LICENSE  README.md  RevereSetup.iss  build_appdir.py  build_macos.sh  dependencies.cmake  imgui.ini  libxml2.cmake  settings.cmake  setup.iss  unwind.supp  vcpkg.json
.github/: FUNDING.yml
apps/: CMakeLists.txt
apps/revere/: CMakeLists.txt  revere.desktop  revere.rc
apps/revere/include/: R_32x32.h  assignment_state.h  configure_state.h  gl_utils.h  imgui_ui.h  revere_cloud.h  revere_version.h.in  utils.h
apps/revere/source/: configure_state.cpp  gl_utils.cpp  main.cpp  revere_cloud.cpp  utils.cpp
apps/vision/: CMakeLists.txt  vision.desktop  vision.rc
apps/vision/include/: V_32x32.h  analytics_event.h  configure_state.h  control_bar.h  control_bar_controller.h  control_bar_renderer.h  error_handling.h  font_keys.h  frame.h  gl_utils.h  icon_texture_manager.h  imgui_ui.h  layouts.h  motion_event.h  pipeline_host.h  pipeline_state.h  query.h  render_context.h  sample.h  segment.h  svg_texture_manager.h  timeline_constants.h  utils.h
apps/vision/source/: configure_state.cpp  control_bar_renderer.cpp  dog_48x48_png.h  error_handling.cpp  gl_utils.cpp  imgui.ini  main.cpp  motion_event.cpp  pipeline_host.cpp  pipeline_state.cpp  query.cpp  timerange.cpp  utils.cpp
imgui/: CMakeLists.txt
imgui/include/imgui/: ImGuiFileDialog.h  imgui.h  imgui_impl_glfw.h
imgui/source/: ImGuiFileDialog.cpp  imgui.ini  imgui_impl_glfw.cpp
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/imgui/source/: ImGuiFileDialog.cpp  imgui.ini  imgui_impl_glfw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer.cpp
libs/r_av/: CMakeLists.txt  TRANSCODER_USAGE.md
libs/r_av/source/: r_audio_decoder.cpp  r_audio_encoder.cpp  r_demuxer.cpp  r_format_utils.cpp  r_muxer.cpp  r_transcoder.cpp  r_video_decoder.cpp  r_video_encoder.cpp
libs/r_av/ut/: CMakeLists.txt
libs/r_db/: CMakeLists.txt
libs/r_db/source/: embeddedvfs.bak  r_sqlite_conn.cpp  r_sqlite_pager.cpp
libs/r_db/ut/: CMakeLists.txt
libs/r_disco/: CMakeLists.txt
libs/r_disco/source/: r_agent.cpp  r_devices.cpp
libs/r_disco/ut/: CMakeLists.txt
libs/r_fakey/: CMakeLists.txt
libs/r_fakey/source/: r_fake_camera.cpp
libs/r_http/: CMakeLists.txt  WEBSOCKET_CLIENT_USAGE.md  WEBSOCKET_USAGE.md
libs/r_http/source/: r_client_request.cpp  r_client_response.cpp  r_http_exception.cpp  r_range_request_generator.cpp  r_server_request.cpp  r_server_response.cpp  r_uri.cpp  r_utils.cpp  r_web_server.cpp  r_websocket.cpp  r_websocket_client.cpp  r_websocket_frame.cpp
libs/r_http/ut/: CMakeLists.txt
libs/r_motion/: CMakeLists.txt
libs/r_motion/source/: r_motion_state.cpp  utils.cpp
libs/r_motion/ut/: CMakeLists.txt
libs/r_onvif/: CMakeLists.txt
libs/r_onvif/source/: r_onvif_cam.cpp  r_onvif_session.cpp
libs/r_onvif/ut/: CMakeLists.txt
libs/r_pipeline/: CMakeLists.txt
libs/r_pipeline/source/: r_arg.cpp  r_gst_buffer.cpp  r_gst_source.cpp  r_sample_context.cpp  r_stream_info.cpp
libs/r_pipeline/ut/: CMakeLists.txt
libs/r_storage/: CMakeLists.txt
libs/r_storage/source/: r_md_storage_file.cpp  r_md_storage_file_reader.cpp  r_ring.cpp  r_storage_file.cpp  r_storage_file_reader.cpp
libs/r_storage/ut/: CMakeLists.txt
libs/r_ui_utils/: CMakeLists.txt
libs/r_ui_utils/source/: font_catalog.cpp  svg_icons.cpp  texture.cpp  texture_loader.cpp  utils.cpp
libs/r_utils/: CMakeLists.txt
libs/r_vss/: CMakeLists.txt
r_codec/: CMakeLists.txt
r_codec/source/: r_video_decoder.cpp  r_video_encoder.cpp
r_db/: CMakeLists.txt
r_db/source/: r_sqlite_conn.cpp
r_disco/: CMakeLists.txt
r_disco/source/: r_agent.cpp  r_devices.cpp  r_stream_config.cpp
r_fakey/: CMakeLists.txt
r_fakey/source/: r_fake_camera.cpp
r_http/: CMakeLists.txt
r_http/source/: r_client_request.cpp  r_client_response.cpp  r_methods.cpp  r_server_request.cpp  r_server_response.cpp
r_mux/: CMakeLists.txt
r_mux/source/: r_demuxer.cpp  r_format_utils.cpp  r_muxer.cpp
r_onvif/: CMakeLists.txt
r_onvif/source/: imgui.ini  r_onvif_session.cpp
r_pipeline/: CMakeLists.txt
r_pipeline/source/: r_gst_buffer.cpp  r_gst_source.cpp  r_sample_context.cpp  r_stream_info.cpp
r_storage/: CMakeLists.txt
r_storage/source/: r_dumbdex.cpp  r_ind_block.cpp  r_rel_block.cpp  r_ring.cpp  r_storage_file.cpp  r_storage_file_reader.cpp
r_ui_utils/: CMakeLists.txt
r_ui_utils/source/: font_catalog.cpp  stb_image.cpp  texture_loader.cpp  utils.cpp
r_utils/: CMakeLists.txt
r_utils/source/: r_algorithms.cpp  r_args.cpp  r_blob_tree.cpp  r_byte_ptr.cpp  r_file.cpp  r_file_lock.cpp  r_logger.cpp  r_md5.cpp  r_memory_map.cpp  r_nullable.cpp  r_pool.cpp  r_process.cpp  r_sha1.cpp  r_sha_256.cpp  r_socket.cpp  r_socket_address.cpp  r_stack_trace.cpp  r_string_utils.cpp  r_time_utils.cpp  r_timer.cpp  r_uuid.cpp
r_vss/: CMakeLists.txt
r_vss/source/: r_motion_engine.cpp  r_prune.cpp  r_recording_context.cpp  r_stream_keeper.cpp  r_vss_utils.cpp  r_ws.cpp
revere/: CMakeLists.txt  revere.desktop  revere.rc
revere/include/: assignment_state.h  gl_utils.h  imgui_ui.h  rtsp_source_camera_config.h  utils.h
revere/source/: gl_utils.cpp  imgui.ini  main.cpp  utils.cpp
ut/: CMakeLists.txt
ut/include/: test_r_codec.h  test_r_db.h  test_r_disco.h  test_r_http.h  test_r_motion.h  test_r_onvif.h  test_r_pipeline.h  test_r_storage.h  test_r_utils.h  test_r_vss.h
ut/source/: framework.cpp  test_r_codec.cpp  test_r_db.cpp  test_r_disco.cpp  test_r_http.cpp  test_r_motion.cpp  test_r_mux.cpp  test_r_onvif.cpp  test_r_pipeline.cpp  test_r_storage.cpp  test_r_utils.cpp  test_r_vss.cpp
vision/: CMakeLists.txt  vision.desktop  vision.rc
vision/include/: configure_state.h  control_bar.h  frame.h  gl_utils.h  imgui.ini  imgui_ui.h  layouts.h  pipeline_host.h  pipeline_state.h  query.h  render_context.h  stream_info.h  timerange.h  utils.h
vision/source/: configure_state.cpp  gl_utils.cpp  layouts.cpp  main.cpp  pipeline_host.cpp  pipeline_state.cpp  query.cpp  segment.cpp  utils.cpp
(+337 files in other folders)
