
add_subdirectory(r_utils)
add_subdirectory(r_db)
add_subdirectory(r_http)
add_subdirectory(r_av)
add_subdirectory(r_fakey)
add_subdirectory(r_storage)
add_subdirectory(r_motion)
add_subdirectory(r_onvif)
add_subdirectory(r_pipeline)
add_subdirectory(r_disco)
add_subdirectory(r_vss)
add_subdirectory(imgui)
add_subdirectory(r_ui_utils)
